--- a/index.html
+++ b/index.html
@@ -4,8 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Baigiamasis Darbas</title>
+  <link rel="stylesheet" href="app/css/style.css">
 </head>
 <body>
-  <h1>Baigiamasis Darbas</h1>
+  <div class="navbar">
+    <img src="app/svgs/navbar.svg" alt="Cheshire Country Logo">
+    <nav>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Pricing</a>
+      <a href="#">Reviews</a>
+      <a href="#">Contact</a>
+    </nav>
+  </div>
+
+  <section class="section-1">
+    <div class="content">
+      <img src="app/svgs/section-1.svg" alt="Cheshire Country Logo">
+      <h1>Explained propriety of out perpetual to you</h1>
+      <p>Insipidity the sufficient discretion imprudence resolution sir him decisively. Proceed how any engaged visitor. Explained propriety of out perpetual his you. Feel sold off felt nay rose met you. We so entreaties cultivated astonished is.</p>
+      <button>DOWNLOAD</button>
+    </div>
+    <div class="sign-in">
+      <h1>Try Your <span>FREE</span> Trial Today</h1>
+      <div class="wrapper">
+        <h3>Your details</h3>
+        <input type="text" placeholder="First name">
+        <input type="text" placeholder="Last name">
+        <input type="number" placeholder="Phone number">
+        <h3 class="type">Type of subscription</h3>
+        <form>
+          <input type="radio" id="monthly" name="type_of_subscription" value="Monthly">
+          <label for="monthly">MONTHLY</label>
+          <input type="radio" id="yearly" name="type_of_subscription" value="Yearly">
+          <label for="yearly">YEARLY</label>
+        </form>
+      </div>
+      <a href="#">GET STARTED</a>
+    </div>
+  </section>
+
+  <footer class="section-1-footer">
+    <div>
+      <h2>Social Media</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+    </div>
+    <div class="social-icons">
+      <i></i>
+    </div>
+  </footer>
 </body>
-</html>l
+</html>
