--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+  <!-- Title -->
   <title>Baigiamasis Darbas</title>
+  <!-- Custom Styles -->
   <link rel="stylesheet" href="app/css/style.css">
 </head>
 <body>
@@ -21,7 +25,8 @@
   <section class="section-1">
     <div class="content">
       <img src="app/svgs/section-1.svg" alt="Cheshire Country Logo">
-      <h1>Explained propriety of out perpetual to you</h1>
+      <h1>Explained propriety <br>of out perpetual to you</h1>
+      <hr width="75" size="4" color="white">
       <p>Insipidity the sufficient discretion imprudence resolution sir him decisively. Proceed how any engaged visitor. Explained propriety of out perpetual his you. Feel sold off felt nay rose met you. We so entreaties cultivated astonished is.</p>
       <button>DOWNLOAD</button>
     </div>
@@ -45,12 +50,16 @@
   </section>
 
   <footer class="section-1-footer">
-    <div>
+    <div class="social">
       <h2>Social Media</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
     </div>
     <div class="social-icons">
-      <i></i>
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-pinterest-p"></i>
+      <i class="fa-solid fa-rss"></i>
     </div>
   </footer>
 </body>
