--- a/index.html
+++ b/index.html
@@ -11,56 +11,124 @@
   <link rel="stylesheet" href="app/css/style.css">
 </head>
 <body>
-  <div class="navbar">
-    <img src="app/svgs/navbar.svg" alt="Cheshire Country Logo">
-    <nav>
-      <a href="#">Features</a>
-      <a href="#">About</a>
-      <a href="#">Pricing</a>
-      <a href="#">Reviews</a>
-      <a href="#">Contact</a>
-    </nav>
-  </div>
+  
+  <nav>
+    <div class="wrapper">
+      <img src="app/svgs/navbar.svg" alt="Cheshire Country Logo">
+      <ul>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Reviews</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
 
   <section class="section-1">
-    <div class="content">
-      <img src="app/svgs/section-1.svg" alt="Cheshire Country Logo">
-      <h1>Explained propriety <br>of out perpetual to you</h1>
-      <hr width="75" size="4" color="white">
-      <p>Insipidity the sufficient discretion imprudence resolution sir him decisively. Proceed how any engaged visitor. Explained propriety of out perpetual his you. Feel sold off felt nay rose met you. We so entreaties cultivated astonished is.</p>
-      <button>DOWNLOAD</button>
-    </div>
-    <div class="sign-in">
-      <h1>Try Your <span>FREE</span> Trial Today</h1>
-      <div class="wrapper">
-        <h3>Your details</h3>
-        <input type="text" placeholder="First name">
-        <input type="text" placeholder="Last name">
-        <input type="number" placeholder="Phone number">
-        <h3 class="type">Type of subscription</h3>
-        <form>
-          <input type="radio" id="monthly" name="type_of_subscription" value="Monthly">
-          <label for="monthly">MONTHLY</label>
-          <input type="radio" id="yearly" name="type_of_subscription" value="Yearly">
-          <label for="yearly">YEARLY</label>
-        </form>
+    <div class="wrapper">
+      <div class="content">
+        <img src="app/svgs/section-1.svg" alt="Cheshire Country Logo">
+        <h1>Explained propriety <br>of out perpetual to you</h1>
+        <hr width="75" size="4" color="white">
+        <p>Insipidity the sufficient discretion imprudence resolution sir him decisively. Proceed how any engaged visitor. Explained propriety of out perpetual his you. Feel sold off felt nay rose met you. We so entreaties cultivated astonished is.</p>
+        <button>DOWNLOAD</button>
       </div>
-      <a href="#">GET STARTED</a>
+      <div class="sign-in">
+        <h1>Try Your <span>FREE</span> Trial Today</h1>
+        <form>
+          <h3>Your details</h3>
+          <input type="text" placeholder="First name">
+          <input type="text" placeholder="Last name">
+          <input type="number" placeholder="Phone number">
+          <h3 class="tos">Type of subscription</h3>
+          <div class="type-of-subscription">
+            <input type="radio" id="monthly" name="type_of_subscription" value="Monthly">
+            <label for="monthly">MONTHLY</label>
+            <input type="radio" id="yearly" name="type_of_subscription" value="Yearly">
+            <label for="yearly">YEARLY</label>
+          </div>
+        </form>
+        <a href="#">GET STARTED</a>
+      </div>
     </div>
   </section>
 
   <footer class="section-1-footer">
-    <div class="social">
-      <h2>Social Media</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
-    </div>
-    <div class="social-icons">
-      <i class="fa-brands fa-facebook-f"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-pinterest-p"></i>
-      <i class="fa-solid fa-rss"></i>
+    <div class="wrapper">
+      <div class="social">
+        <h2>Social Media</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+      </div>
+      <div class="social-icons">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-pinterest-p"></i>
+        <i class="fa-solid fa-rss"></i>
+      </div>
     </div>
   </footer>
+
+  <section class="section-2">
+    <div class="wrapper">
+      <div class="grid-1">
+        <div><p>REGISTER</p></div>
+        <div><p>APPLY</p></div>
+        <div><p>RECEIVE</p></div>
+      </div>
+      <div class="content">
+        <h1>Tabs with soft transitioning effect. Explained propriety of out perpetual his you.</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+      </div>
+      <div class="grid-2">
+
+        <div class="container">
+          <img class="img-1" src="app/images/section-2-grid-2-img-1.png" alt="leafes">
+          <div class="middle">
+            <div class="text">Explore</div>
+          </div>
+        </div>
+
+        <div class="container">
+          <img class="img-2" src="app/images/section-2-grid-2-img-2.png" alt="vegetables">
+          <div class="middle">
+            <div class="text">Vegan</div>
+          </div>
+        </div>
+
+        <div class="container-2">
+          <img class="img-3" src="app/images/section-2-grid-2-img-3.png" alt="stairs">
+          <div class="middle">
+            <div class="text">Stairs</div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="section-3">
+    <div class="wrapper">
+      <div class="half">
+        <img src="app/svgs/section-3.svg" alt="logo">
+      </div>
+      <div class="content">
+        <h1>Erat tempor tempus erat malesuada</h1>
+        <hr width="220" size="4" color="orange">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+        <div class="eye">
+          <h3>Title</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+        </div>
+        <div class="comment">
+          <h3>Title</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
