--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <div class="sign-in">
         <h1>Try Your <span>FREE</span> Trial Today</h1>
-        <form>
+        <form action="#">
           <h3>Your details</h3>
           <input type="text" placeholder="First name">
           <input type="text" placeholder="Last name">
@@ -116,19 +116,200 @@
       </div>
       <div class="content">
         <h1>Erat tempor tempus erat malesuada</h1>
-        <hr width="220" size="4" color="orange">
+        <hr width="200" size="4">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
-        <div class="eye">
-          <h3>Title</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+        <div class="content-box">
+          <div class="icon">
+            <i class="fa-regular fa-eye"></i>
+          </div>
+          <div class="content">
+            <h3>Title</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+          </div>
         </div>
-        <div class="comment">
-          <h3>Title</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+        <div class="content-box">
+          <div class="icon">
+            <i class="fa-regular fa-comment"></i>
+          </div>
+          <div class="content">
+            <h3>Title</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+          </div>
+
         </div>
       </div>
     </div>
   </section>
+
+  <section class="section-4">
+    <div class="wrapper">
+      <div class="title">
+        <h1>WHY THIS IS AWESOME</h1>
+        <hr width="60px">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="features">
+        <div class="content">
+          <div class="icon">
+            <i class="fa-solid fa-award"></i>
+          </div>
+          <h2>Thoughtful Design</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod ibendum laoreet.</p>
+        </div>
+        <div class="content">
+          <div class="icon">
+            <i class="fa-solid fa-spa"></i>
+          </div>
+          <h2>Well Crafted</h2>
+          <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit Aenean euismod bibendum.</p>
+        </div>
+        <div class="content">
+          <div class="icon">
+            <i class="fa-brands fa-cc-visa"></i>
+          </div>
+          <h2>Easy to Customize</h2>
+          <p>Proin gravida dolor sit amet lacus accumsan et viverra.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section-5">
+    <div class="wrapper">
+      <div class="title">
+        <h1>PRICING OPTIONS</h1>
+        <hr width="60px">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <div class="prices">
+        <div class="content">
+          <div class="header">
+            <h2>Basic</h2>
+            <h1><span>$</span>0</h1>
+            <h3>Free for Life</h3>
+          </div>
+          <div class="space"></div>
+          <div class="features">
+            <p>1 GB OF SPACE</p>
+            <p>10 GB OF BANDWIDTH</p>
+            <p>3 WEBSITES</p>
+            <p>BASIC CUSTOMIZATION</p>
+            <p>WORDPRESS INTEGRATION</p>
+            <p>EMAIL SUPPORT</p>
+          </div>
+        </div>
+        <div class="content">
+          <div class="header">
+            <h2>Professional</h2>
+            <h1><span>$</span>19</h1>
+            <h3>Monthly Payment</h3>
+          </div>
+          <div class="space-middle">OUR MOST POPULAR</div>
+          <div class="features">
+            <p>5 GB OF SPACE</p>
+            <p>50 GB OF BANDWIDTH</p>
+            <p>12 WEBSITES</p>
+            <p>ADVANCED CUSTOMIZATION</p>
+            <p>WORDPRESS INTEGRATION</p>
+            <p>EMAIL SUPPORT</p>
+          </div>
+        </div>
+        <div class="content">
+          <div class="header">
+            <h2>Enterprise</h2>
+            <h1><span>$</span>70</h1>
+            <h3>Monthly Payment</h3>
+          </div>
+          <div class="space"></div>
+          <div class="features">
+            <p>UNLIMITED SPACE</p>
+            <p>UNLIMITED BANDWIDTH</p>
+            <p>100 WEBSITES</p>
+            <p>ADVANCED CUSTOMIZATION</p>
+            <p>WORDPRESS INTEGRATION</p>
+            <p>24/7 CUSTOMER SUPPORT</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section-6">
+    <div class="wrapper">
+      <h1>WHAT OUR CUSTOMERS ARE SAYING</h1>
+      <hr width="60px">
+      <div class="all-feedbacks">
+        <div class="feedback">
+          <div class="comment">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex.</p>
+          </div>
+          <div class="profile">
+            <div class="img"></div>
+            <div class="info">
+              <h2>Jeremy H.</h2>
+              <p>Manager</p>
+            </div>
+          </div>
+        </div>
+        <div class="feedback">
+          <div class="comment">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita.</p>
+          </div>
+          <div class="profile">
+            <div class="img"></div>
+            <div class="info">
+              <h2>John S.</h2>
+              <p>Freelancer</p>
+            </div>
+          </div>
+        </div>
+        <div class="feedback">
+          <div class="comment">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex.</p>
+          </div>
+          <div class="profile">
+            <div class="img"></div>
+            <div class="info">
+              <h2>Susan W.</h2>
+              <p>Photographer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section-7">
+    <div class="wrapper">
+      <h1>CONTACT US</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <form action="#">
+        <input type="text" placeholder="First name">
+        <input type="text" placeholder="Last name">
+        <input type="number" placeholder="Phone number">
+        <div class="type">
+          <input type="radio" id="personal" name="personal-company" value="Personal">
+          <label for="personal">PERSONAL</label>
+          <input type="radio" id="company" name="personal-company" value="Company">
+          <label for="company">COMPANY</label>
+        </div>
+        <button>SEND</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <div class="wrapper">
+      <div class="social-icons">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-pinterest-p"></i>
+        <i class="fa-solid fa-rss"></i>
+      </div>
+      <p>© 2019 Cheshire County</p>
+    </div>
+  </footer>
 
 </body>
 </html>
