--- a/index.html
+++ b/index.html
@@ -422,8 +422,7 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="js/swiper.js"></script>
   <script src="js/burger.js"></script>
-  <script src="js/form-1.js"></script>
-  <script src="js/form-2.js"></script>
+  <script src="js/forms.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
